@startuml

entity users {
  +id : INTEGER <<PK>>
  --
  username: VARCHAR(20)
  email : VARCHAR(40)
  password_digest : VARCHAR(80)
  image_url : VARCHAR(255)
  active: BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
  provider : VARCHAR(20)
  uid : VARCHAR(255)
  google_token : TEXT
  google_refresh_token : TEXT
  last_login_at : DATETIME
}

entity login_logs {
  +id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  success : BOOLEAN
  ip_address : VARCHAR(40)
  created_at : DATETIME
}

entity tasks {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(40)
  description : TEXT
  data: TEXT
  document_url : VARCHAR(255)
  status : VARCHAR(20)
  user_id : INTEGER <<FK>>
  task_type_id : INTEGER <<FK>>
  period_id : INTEGER <<FK>>
}

entity periods {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(10)
}

entity task_types {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(25)
  description : VARCHAR(100)
  video_url : VARCHAR(255)
}

users ||--o{ login_logs
users ||--o{ tasks
periods ||--o{ tasks
task_types ||--o{ tasks

@enduml